syntax = "proto3";
option optimize_for = SPEED;

enum PROTOCOL
{
	ID_PKT_VERSION_REQ = 0;
	ID_PKT_VERSION_RES = 1;
	ID_PKT_LOGIN_REQ = 2;
	ID_PKT_LOGIN_RES = 3; 
	ID_PKT_CREATE_ROOM_REQ = 4;
	ID_PKT_CREATE_ROOM_RES = 5;
	ID_PKT_ENTER_ROOM_REQ = 6;
	ID_PKT_ENTER_ROOM_RES = 7;
	ID_PKT_LEAVE_ROOM_REQ = 8;
	ID_PKT_LEAVE_ROOM_RES = 9;
	ID_PKT_BITMAP_MESSAGE_REQ = 10;
	ID_PKT_BITMAP_MESSAGE_RES = 11;
	ID_PKT_NEW_USER_IN_ROOM_NTY = 12;
	ID_PKT_ROOM_LIST_REQ = 13;
	ID_PKT_ROOM_LIST_RES = 14;

	ID_PKT_GAME_START_NTY = 15;
	ID_PKT_GAME_RESULT_NTY = 16;

	ID_PKT_ROOM_PASS_THROUGH_REQ = 17;
	ID_PKT_ROOM_PASS_THROUGH_RES = 18;
	
	ID_PKT_NOTICE_REQ = 19;
	ID_PKT_NOTICE_RES = 20;

	ID_PKT_AUDIO_MESSAGE_REQ = 21;
	ID_PKT_AUDIO_MESSAGE_RES = 22;

	ID_PKT_PRAY_MESSAGE_REQ = 23;
	ID_PKT_PRAY_MESSAGE_RES = 24;

	ID_PKT_PRAY_MESSAGE_REG_REQ = 25;
	ID_PKT_PRAY_MESSAGE_REG_RES = 26;

	ID_PKT_QNA_REQ = 27;
	ID_PKT_QNA_RES = 28;
};

enum ErrorCode
{

	Success = 0;
	DataBaseError = 1;
	LoginDuplicate = 2;
	SystemError = 3;
	LoginFailed = 4;
};

